--- a/data/blog/Vscode-Notlari.mdx
+++ b/data/blog/Vscode-Notlari.mdx
@@ -58,6 +58,7 @@ Kısayolları custom oluşturduğumdan derli toplu bir yerde tutmak iyi fikir, t
 * toggle collapse/expand section: `ctrl+k+ctrl+l`
 * toggle expand full page: `ctrl+k+ctrl+j`
 * toggle collapse full page: `ctrl+k+ctrl+0`
+* view: toggle maximize editor group: `ctrl+k+ctrl+m`
 
 [kaynak](https://github.com/yzhang+gh/vscode+markdown#keyboard+shortcuts+1)
 
